# password-manager-web-app

./: README.md
Backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.override.yml  docker-compose.yml  password-manager-deployment.yml  postgres-deployment.yml  spec.yaml  sqlx-data.json
Backend/configuration/: base.yml  docker.yml  local.yml  production.yml
Backend/migrations/: 20230514203103_pass_manager.down.sql  20230514203103_pass_manager.up.sql  20250212040503_add_google_auth.down.sql  20250212040503_add_google_auth.up.sql
Backend/src/: lib.rs  log_config.rs  main.rs  start_server.rs
Backend/src/config/: mod.rs
Backend/src/configs/: mod.rs
Backend/src/feature_route/: delete_details.rs  fetch_all.rs  fetch_details.rs  gen_pass.rs  mod.rs  store_details.rs  store_detils.rs  update_details.rs
Backend/src/middleware/: form_validator_mid.rs  middleware.rs  middlewares.rs  mod.rs
Backend/src/models/: mod.rs  user_data.rs  user_schema.rs
Backend/src/user_routes/: del_account.rs  google_oauth.rs  health_check.rs  login.rs  mod.rs  sign_up.rs
Backend/src/utils/: db_migration.rs  encryption_module.rs  error_module.rs  gen_token.rs  hashing.rs  mod.rs  pass_strength.rs  rate_limiter.rs  validator_module.rs
