[package]
name = "password-manager-webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name="lib"
path="src/lib.rs"

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
anyhow = "1.0.70"
bcrypt = "0.14.0"
bson = { version = "2.4.0", features = ["uuid-1"] }
chrono = "0.4.24"
dotenv = "0.15.0"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.7.3"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-futures = "0.2.5"
tracing-log = "0.1.3"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
validator = { version = "0.16.0", features = ["derive"] }
