[package]
name = "password-manager-webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name="lib"
path="src/lib.rs"

[dependencies]
#backend framework
actix-rt = "2.8.0"
actix-web = "4.3.1"

# pass-hashing
bcrypt = "0.14.0"
# uuid generation
bson = { version = "2.4.0", features = ["uuid-1"] }

#datetime crate
chrono = "0.4.24"

#load env
dotenv = "0.15.0"

# static memory allocation
lazy_static = "1.4.0"

#rand no generation
rand = "0.8.5"
#regular exp
regex = "1.7.3"

#serialize & deserialize
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.95"

# postgreSQL query tool
sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }

# error handling
anyhow = "1.0.70"
thiserror = "1.0.40"

# logging crates
tracing = { version = "0.1.19", features = ["log"] }
tracing-futures = "0.2.5"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "registry"] }
tracing-actix-web = "0.7.4"

#for form validation
validator = { version = "0.16.0", features = ["derive"] }
tracing-bunyan-formatter = "0.3.7"
